src/objects/AccountContact__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountContacts</relationshipLabel>
        <relationshipName>AccountContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AccountContacts</relationshipLabel>
        <relationshipName>AccountContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPrimary</label>
        <type>Checkbox</type>
    </fields>
    <label>AccountContact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AccountContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>